--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "useTabs": false,
     "printWidth": 80,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "htmlWhitespaceSensitivity": "ignore"
 }
